# VectorDB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cli/: CMakeLists.txt  client.cpp
cli/html/: cli.html
config/: serch.conf
data/: rss_crawler.py
data/doc/: problem
data/yuliao/xml/: chinadaily_china.xml  chinadaily_culture.xml  chinadaily_entertainment.xml  chinadaily_lifestyle.xml  chinadaily_opinion.xml  chinadaily_photo.xml  chinadaily_sports.xml  chinadaily_video.xml  chinadaily_world.xml  npr_news.xml  npr_politics.xml  npr_tech.xml  people_art.xml  people_auto.xml  people_book.xml  people_caipiao.xml  people_ccnews.xml  people_chinapic.xml  people_cpc.xml  people_cppcc.xml  people_culture.xml  people_dangjian.xml  people_dangshi.xml  people_edu.xml  people_energy.xml  people_ent.xml  people_env.xml  people_finance.xml  people_game.xml  people_gongyi.xml  people_haixia.xml  people_health.xml  people_history.xml  people_hm.xml  people_homea.xml  people_hongmu.xml  people_house.xml  people_ip.xml  people_it.xml  people_japan.xml  (+86 more)
include/: Acceptor.h  DictProducer.h  EventLoop.h  EventLoopGroup.h  IVFIndex.h  InetAddress.h  InferEngine.h  PageLibPreprocessor.h  SemanticIndexer.h  SockIO.h  Socket.h  SplitTool.h  TcpConnetion.h  TcpServer.h  WordPieceTokenizer.hpp  threadpool.h
src/: Configer.cpp  DictProducer.cpp  EventLoop.cpp  EventLoopGroup.cpp  IVFIndex.cpp  InetAddress.cpp  InferEngine.cpp  PageLibPreprocessor.cpp  SemanticIndexer.cpp  SplitTool.cpp  TcpConnetion.cpp  TcpServer.cpp  main.cpp  taskQueue.cpp
